fixed alignment of delete button

--- a/src/components/Portal/Portal.scss
+++ b/src/components/Portal/Portal.scss
@@ -1,7 +1,7 @@
 @import '../../styles/_variables';
 
 .portal {
-  width: 90%;
+  width: 98%;
   height: 50vh;
   overflow: scroll;
   border: solid $lightGray;
